Fixed spacing issue for "fixed" position header and content beneath

--- a/public/screen.css
+++ b/public/screen.css
@@ -42,3 +42,8 @@ header li {
 header a {
   align-self: center;
 }
+
+.spacer {
+  width: 100vw;
+  height: 64px;
+}
